# q2pro

./: CMakeLists.txt  Makefile
inc/common/: msg.h
inc/shared/: game.h  shared.h
src/baseq2/: g_ptrs.c
src/client/: input.c
src/common/: msg.c  pmove.c
src/refresh/: images.c
src/server/: game.c  send.c  server.h
src/server/mvd/: client.c  game.c
src/unix/: system.c
